# Neural-Projected-Wasserstein-Dynamics

./: FPE.py  KS.py  OU_process.py  README.md  compute_G.py  densities.py  fokker_planck.py  linear_transport.py  losses.py  porous_medium.py  pyproject.toml  two_layer.py
.ipynb_checkpoints/: pyproject-checkpoint.toml  two_layer_1d_new-checkpoint.ipynb
